# OpenGl-Reference-Template

./: .gitignore  CMakeLists.txt  compile_commands.json  graphics.config  make.ps1
include/: callbacks.h  stb_image.h  utils.h
include/glad/: gl.h
shaders/: fragment.shader  vertex.shader
src/: callbacks.c  main.c  utils.c
